--- a/style.css
+++ b/style.css
@@ -13,25 +13,28 @@ body {
     position: relative;
 }
 .superior{
-    color: red;
     position: absolute;
     bottom: 2px;
     right: 5px;
     font-size: 60px;
 }
 .inferior{
-    color: red;
     position: absolute;
     top: 2px;
     left: 5px;
     font-size: 60px;
 }
 .numero{
-    color: red;
     position: absolute;
     padding-top: 60px;
-    padding-left: 60px;
-    font-size: 75px;
+    padding-left: 50px;
+    font-size: 70px;
     font-weight: bold;
     font-family: sans-serif;
 }
+/* .cartasrojas {
+    color: red;
+}
+.cartasnegras {
+    color: black;
+} */
